Implementado campo Resumo, com todos os 6 botoes funcionando

--- a/angular1/app/template/header.html
+++ b/angular1/app/template/header.html
@@ -1,6 +1,6 @@
 <a href="#" class="logo">
-  <span class="logo-mini"><b>P</b>APP</span>
-  <span class="logo-lg"><i class="fa fa-leaf"></i> <b>Primeira</b>APP</span>
+  <span class="logo-mini"><b>R</b>CS</span>
+  <span class="logo-lg"><i class="fa fa-superpowers"></i> <b>Ramper</b>CS</span>
 </a>
 
 <nav class="navbar navbar-static-top">
