--- a/angular1/app/template/menu.html
+++ b/angular1/app/template/menu.html
@@ -2,7 +2,7 @@
   <ul class="sidebar-menu">
     <li>
       <a href='#/dashboard'>
-        <i class="fa fa-dashboard"> <span>Dashboard</span></i>
+        <i class="fa fa-dashboard"><span>&nbsp;&nbsp;Dashboard</span></i>
       </a>
     </li>
     <li class="treeview">
