Arrumado Dashboard estatisticas no listar

--- a/angular1/app/template/menu.html
+++ b/angular1/app/template/menu.html
@@ -1,11 +1,12 @@
 <section class="sidebar">
-  <ul class="sidebar-menu">
-    <li>
-      <a href='#/dashboard'>
+  <ul class="sidebar-menu tree">
+    <li class="header"></li>
+    <li class="treeview">
+      <a href='#/dashboard' >
         <i class="fa fa-dashboard"><span>&nbsp;&nbsp;Dashboard</span></i>
       </a>
     </li>
-    <li class="treeview">
+    <li>
       <a href>
         <i class="fa fa-edit"></i><span>Cadastro</span>
         <i class="fa fa-angle-left pull-right"></i>
